Revision history for Perl extension Template::Stash::AutoEscape

0.01    Mon Jun  8 22:25:27 2009
        - original version

0.02    Tue Jun 08 18:28:37 2010
        - fix requires
        - now [% hash.item(key) %] works as [% hash.item(key.raw) %] by default.